test/tests/compiler/8_loops/valid/do_while.plx
pub fn main(none) i32 {
    a: i32 = 1
    loop .. while a < 11 {
        a = a * 2
    }

    return a
}

