test/tests/compiler/8_loops/invalid_parse/while_missing_paren.plx
pub fn main(none) i32 {
    loop while 1 .. {
        return 0
    }
}
